--- a/styles.css
+++ b/styles.css
@@ -177,3 +177,10 @@ hr{
 
 }
 
+/* If the screen size is 600px wide or less, hide the element */
+@media only screen and (max-width: 600px) {
+
+    container {
+      font-style: italic;
+    }
+}
